force-app/main/default/objects/District__c/fields/DistrictCode__c.field-meta.xml
<CustomField>
    <fullName>DistrictCode__c</fullName>
    <description>รหัสอำเภอ</description>
    <label>District Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>