force-app/main/default/objects/District__c/fields/DistrictExternalKey__c.field-meta.xml
<CustomField>
    <fullName>DistrictExternalKey__c</fullName>
    <description>District Code + Province Code</description>
    <externalId>true</externalId>
    <label>District External Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>