force-app/main/default/objects/District__c/fields/DistrictNameENG__c.field-meta.xml
<CustomField>
    <fullName>DistrictNameENG__c</fullName>
    <description>ชื่ออำเภอ(อังกฤษ)</description>
    <label>District Name (ENG)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>