force-app/main/default/objects/District__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <description>รหัสไปรษณีย์</description>
    <label>Postcode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>