force-app/main/default/objects/District__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>จังหวัดที่อำเภอตั้งอยู่</description>
    <label>Province</label>
    <referenceTo>Province__c</referenceTo>
    <relationshipLabel>Districts</relationshipLabel>
    <relationshipName>Districts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>