force-app/main/default/objects/District__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>DistrictNameENG__c</columns>
    <columns>DistrictCode__c</columns>
    <columns>Province__c</columns>
    <filterScope>Everything</filterScope>
    <label>All District</label>
</ListView>